--- a/FPSSyncApp/FPSSyncApp.csproj
+++ b/FPSSyncApp/FPSSyncApp.csproj
@@ -70,7 +70,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Utilities\ActiveUserSteamId.cs" />
+    <Compile Include="Utilities\ActiveSteamUser.cs" />
     <Compile Include="Utilities\SteamGameLocator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
